force-app/main/default/objects/VN_Resultado__c/VN_Resultado__c.object-meta.xml
<CustomObject>
    <description>Armazena as vendas mês a mês por ano fiscal.</description>
    <label>Resultado</label>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>No. Resultado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>