force-app/main/default/objects/VN_Resultado__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <description>Meta do participante no respectivo mês.</description>
    <inlineHelpText>Meta do participante no respectivo mês.</inlineHelpText>
    <label>Meta</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>