force-app/main/default/objects/VN_Resultado__c/fields/V_Ano__c.field-meta.xml
<CustomField>
    <fullName>V_Ano__c</fullName>
    <description>Ano relacionado à meta do participante. Exemplo: 2019</description>
    <formula>TEXT(YEAR(V_PeriodoVenda__c))</formula>
    <label>Ano</label>
    <type>Text</type>
</CustomField>