force-app/main/default/objects/VN_Resultado__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <description>Ano fiscal relacionado à meta do participante. Por exemplo: FY19</description>
    <inlineHelpText>Ano fiscal relacionado à meta do participante. Por exemplo: FY19</inlineHelpText>
    <label>Ano Fiscal</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>