force-app/main/default/objects/VN_Resultado__c/fields/V_Area__c.field-meta.xml
<CustomField>
    <fullName>V_Area__c</fullName>
    <description>Área do participante relacionado à venda.</description>
    <inlineHelpText>Área do participante relacionado à venda.</inlineHelpText>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VERTICAIS</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
            <value>
                <fullName>PLANEJAMENTO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>TBD I</fullName>
            </value>
            <value>
                <fullName>TBD II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>