force-app/main/default/objects/VN_Resultado__c/fields/V_Cargo__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo__c</fullName>
    <description>Cargo do participante nesse período do faturamento.</description>
    <inlineHelpText>Cargo do participante nesse período do faturamento.</inlineHelpText>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GERENTE DE CONTAS</fullName>
            </value>
            <value>
                <fullName>COORDENADOR | GERENTE REGIONAL VIP</fullName>
            </value>
            <value>
                <fullName>LÍDER</fullName>
            </value>
            <value>
                <fullName>DIRETOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>