force-app/main/default/objects/VN_Resultado__c/fields/V_ChaveComposta__c.field-meta.xml
<CustomField>
    <fullName>V_ChaveComposta__c</fullName>
    <description>Pela carga de dados, deverá receber a concatenação dos campos: Área+Liderança+Setor+Cargo do registro de resultado. Campo esse utilizado para o cálculo da média ponderada de atingimento e superação de metas.</description>
    <inlineHelpText>Pela carga de dados, deverá receber a concatenação dos campos: Área+Liderança+Setor+Cargo do registro de resultado. Campo esse utilizado para o cálculo da média ponderada de atingimento e superação de metas.</inlineHelpText>
    <label>Chave Composta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>