force-app/main/default/objects/VN_Resultado__c/fields/V_Lideranca__c.field-meta.xml
<CustomField>
    <fullName>V_Lideranca__c</fullName>
    <description>Valor de liderança do participante relacionado à venda.</description>
    <inlineHelpText>Valor de liderança do participante relacionado à venda.</inlineHelpText>
    <label>Liderança</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRANDES BANCOS</fullName>
            </value>
            <value>
                <fullName>SERVIÇOS FINANCEIROS</fullName>
            </value>
            <value>
                <fullName>MULTISECTOR</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
            <value>
                <fullName>NOVOS NEGÓCIOS</fullName>
            </value>
            <value>
                <fullName>VAREJO, CPG E PAGAMENTOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>