force-app/main/default/objects/VN_Resultado__c/fields/V_LiderImediato__c.field-meta.xml
<CustomField>
    <fullName>V_LiderImediato__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Líder imediato deste participante durante o período das vendas.</description>
    <inlineHelpText>Líder imediato deste participante durante o período das vendas.</inlineHelpText>
    <label>Líder Imediato</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Resultados (Líder Imediato)</relationshipLabel>
    <relationshipName>Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>