force-app/main/default/objects/VN_Resultado__c/fields/V_Mes__c.field-meta.xml
<CustomField>
    <fullName>V_Mes__c</fullName>
    <description>Mês relacionado à meta do participante. Exemplo: 4</description>
    <formula>MONTH(V_PeriodoVenda__c)</formula>
    <inlineHelpText>Mês relacionado à meta do participante. Exemplo: 4</inlineHelpText>
    <label>Mês</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>