force-app/main/default/objects/VN_Resultado__c/fields/V_MetaParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipante__c</fullName>
    <description>Meta do participante relacionada ao registro de vendas/NF em aberto.</description>
    <inlineHelpText>Meta do participante relacionada ao registro de vendas/NF em aberto.</inlineHelpText>
    <label>Meta do Participante</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipName>Vendas_NF_Em_Aberto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>