force-app/main/default/objects/VN_Resultado__c/fields/V_Participante__c.field-meta.xml
<CustomField>
    <fullName>V_Participante__c</fullName>
    <description>Participante relacionado à venda ou NF aberta.</description>
    <inlineHelpText>Participante relacionado à venda ou NF aberta.</inlineHelpText>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipName>Vendas_NF_Em_Aberto</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>