force-app/main/default/objects/VN_Resultado__c/fields/V_PeriodoVenda__c.field-meta.xml
<CustomField>
    <fullName>V_PeriodoVenda__c</fullName>
    <description>Período da venda recebido na carga Serasa (considerar mês e ano).</description>
    <inlineHelpText>Período da venda recebido na carga Serasa (considerar mês e ano).</inlineHelpText>
    <label>Período da Venda</label>
    <required>true</required>
    <type>Date</type>
</CustomField>