force-app/main/default/objects/VN_Resultado__c/fields/V_RecebeBadges__c.field-meta.xml
<CustomField>
    <fullName>V_RecebeBadges__c</fullName>
    <description>Para o participante receber badges, ele não pode ser da categoria &quot;DIRETOR&quot; e o campo &quot;Não Receber Badge&quot; no cadastro do participante não pode estar assinalado.</description>
    <formula>AND( 

V_Participante__r.V_NaoDeveReceberBadge__c = FALSE,
TEXT(V_Participante__r.V_Cargo__c) &lt;&gt; &apos;DIRETOR&apos;

)</formula>
    <inlineHelpText>Para o participante receber badges, ele não pode ser da categoria &quot;DIRETOR&quot; e o campo &quot;Não Receber Badge&quot; no cadastro do participante não pode estar assinalado.</inlineHelpText>
    <label>Recebe Badges?</label>
    <type>Checkbox</type>
</CustomField>