force-app/main/default/objects/VN_Resultado__c/fields/V_Tipo__c.field-meta.xml
<CustomField>
    <fullName>V_Tipo__c</fullName>
    <description>Tipo do registro de resultado.</description>
    <inlineHelpText>Tipo do registro de resultado.</inlineHelpText>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resultados</fullName>
            </value>
            <value>
                <fullName>Visitas</fullName>
            </value>
            <value>
                <fullName>Cadastros</fullName>
            </value>
            <value>
                <fullName>Conversões</fullName>
            </value>
            <value>
                <fullName>VCM</fullName>
            </value>
            <value>
                <fullName>Net Add</fullName>
            </value>
            <value>
                <fullName>Oportunidades Abertas</fullName>
            </value>
            <value>
                <fullName>LNO</fullName>
            </value>
            <value>
                <fullName>eCred</fullName>
            </value>
            <value>
                <fullName>Treinamento Reciclagem</fullName>
            </value>
            <value>
                <fullName>Serasa Itinerante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>