force-app/main/default/objects/VN_Resultado__c/fields/V_Valor__c.field-meta.xml
<CustomField>
    <fullName>V_Valor__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor de vendas ou NF em aberto do participante realizada no mês e ano definidos.</description>
    <inlineHelpText>Valor de vendas ou NF em aberto do participante realizada no mês e ano definidos.</inlineHelpText>
    <label>Valor</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>